appId: com.jbig.tonkeeper
---
- tapOn: "Import Existing Wallet"
- tapOn: "Import your existing TON or multichain wallet"
- tapOn: "12 words"
- tapOn: "Paste"
- tapOn: "Allow Paste"
- tapOn: "Continue"
- tapOn: "Continue"
